[gd_scene load_steps=3 format=2]

[ext_resource path="res://app/themes/dark.tres" type="Theme" id=1]
[ext_resource path="res://app/interface/track/menu/track_menu.gd" type="Script" id=2]

[node name="TrackMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 139.0
margin_bottom = 70.0
theme = ExtResource( 1 )
items = [ "TRACK_MENU_PLAY_NEXT", null, 0, false, false, 0, 0, null, "", false, "TRACK_MENU_ADD_TO_MY_TRACKS", null, 0, false, false, 1, 0, null, "", false, "TRACK_MENU_ADD_TO_FOLDER", null, 0, false, false, 2, 0, null, "", false, "TRACK_MENU_EDIT", null, 0, false, false, -1, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "TRACK_MENU_WATCH_ON_YOUTUBE", null, 0, false, false, 4, 0, null, "", false, "TRACK_MENU_WATCH_ON_YOUTUBE_AT_TIME", null, 0, false, false, 5, 0, null, "", false, "TRACK_MENU_COPY_YOUTUBE_URL", null, 0, false, false, 6, 0, null, "", false, "TRACK_MENU_COPY_YOUTUBE_ID", null, 0, false, false, 7, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lists" type="PopupMenu" parent="PopupMenu"]
margin_right = 20.0
margin_bottom = 20.0
hide_on_checkable_item_selection = false

[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="popup_hide" from="PopupMenu" to="." method="_on_PopupMenu_popup_hide"]
[connection signal="index_pressed" from="PopupMenu/Lists" to="." method="_on_Lists_index_pressed"]
